# moonfish

./: .dockerignore  .gitignore  Procfile  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  worker.Dockerfile  workers.py
app/: auth.py  config.py  database.py  deps.py  main.py  model.py  models.py  prompts.py  run_worker.py  security.py  services.py  storage.py  tools.py  workflows.py
app/ai/: helpers.py  models.py  prompts.py
app/api/: deps.py  main.py
app/api/routes/: admin.py  auth.py  episodes.py  health.py  podcasts.py  subscriptions.py  users.py
app/core/: ai.py  config.py  security.py  services.py  storage.py
app/migrations/: env.py
app/migrations/versions/: 0e7e1a5e9a9a_change_voice_default.py  1526ae7f28df_first_table_init.py  1854b2af5dca_change_column_name_from_image_url_to_.py  1bc56d305b50_add_duration_into_episode_table.py  216fb375d1a0_.py  252082184566_.py  29e35e4bb20a_add_thumbnail_updated_at_column.py  30939aedbccc_alter_the_format_enum.py  3482735d4f04_add_image_url_to_podcast_table.py  3a889ed3a382_add_episode_cover_and_cover_description.py  3be804d8d7fd_add_subscription_tier.py  3c372e3b2078_.py  3ef9149a3e2a_add_foreign_key_in_user_table_to_link_.py  447a7b0edcf7_remove_firstname_and_lastname_and_.py  4f13c5aec81b_drop_title_column_from_podcast_table.py  5c5716125f72_add_device_id_column_to_user_table_to_.py  62627e9e6b0f_first_table_init.py  632712edc658_remove_audio_url_and_duration_from_main_.py  (+22 more)
app/worker/: helpers.py  prompts.py  tools.py  workflows.py
scripts/: build-worker.sh  push-worker.sh  test-worker.sh
