[project]
name = "moonfish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "apsw>=3.49.1.0",
    "cryptography>=44.0.2",
    "exa-py>=1.13.1",
    "fastapi[standard]>=0.115.11",
    "google-genai>=1.8.0",
    "hatchet-sdk>=1.10.2",
    "minio>=7.2.15",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "sentry-sdk[fastapi]>=2.29.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "sse-starlette>=2.2.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
